<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_iniciar_sesion">Iniciar sesión</string>
    <string name="txt_correo">Correo</string>
    <string name="txt_contrasenia">Contraseña</string>
    <string name="txt_entrar">Entrar</string>
    <string name="txt_forgot_pws">Olvidé mi contraseña</string>
</resources>