<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login">

        <ImageView
            android:id="@+id/imgCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_circle_up"
            android:layout_marginTop="-100dp"
            android:layout_marginEnd="-100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/imgTreet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_treet_app"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginStart="@dimen/margin_16"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/imgTreetSmall"
            android:layout_width="@dimen/width_imv_30"
            android:layout_height="@dimen/width_imv_30"
            android:src="@drawable/ic_treet_app"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_20"
            app:layout_constraintTop_toBottomOf="@+id/imgCircle"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_iniciar_sesion"
            android:textSize="@dimen/size_30"
            android:layout_marginTop="@dimen/margin_30"
            android:textColor="@color/blue_dark_700"
            android:fontFamily="@font/roboto_bold"
            app:layout_constraintTop_toBottomOf="@+id/imgTreet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/StyleEdittext"
            android:layout_marginTop="60dp"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLogin">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/roboto_bold"
                android:hint="@string/txt_correo"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPws"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/StyleEdittext"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/tilEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiePws"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:inputType="textPassword"
                android:hint="@string/txt_contrasenia"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="69dp"
            android:layout_marginTop="50dp"
            android:text="@string/txt_entrar"
            style="@style/StyileBtnDarkBlue"
            app:layout_constraintTop_toBottomOf="@+id/tilPws"
            app:layout_constraintStart_toStartOf="@+id/tilPws"
            app:layout_constraintEnd_toEndOf="@+id/tilPws"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lottie_rawRes="@raw/lottie_login"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tvForgotPws"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/txt_forgot_pws"
            android:textColor="@color/blue_dark_700"
            android:textSize="@dimen/size_16"
            android:layout_marginTop="@dimen/margin_16"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="@id/btnLogin"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>